--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
     <footer>
-        <p>© Peter Parker 2023, a Programming Hero initiative.I am siam.</p>
+        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
     </footer>
 
 
